<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
     android:paddingTop="5dp"
     android:orientation="vertical" >

          <TextView
            android:id="@+id/tv_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:text="@string/activity"
              android:textStyle="bold"
              android:paddingTop="10dp"
              android:paddingLeft="10dp"
            android:textSize="16sp"/>

    <EditText
        android:id="@+id/et_activity_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_activity_status"
        android:textSize="20sp"
        android:maxLines="3"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
         />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_previous_record_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/previous_record"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:textSize="16sp"
           />

        <TextView
            android:id="@+id/tv_previous_record"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="16sp"/>

    </LinearLayout>


</LinearLayout>